Fixed unblurring of playercontrols and added ease on progressbar

--- a/static/controlstyle.css
+++ b/static/controlstyle.css
@@ -167,6 +167,6 @@
 {
 	height:30px;
 	background-color:rgba(0,0,0,0.5);
-	/*-webkit-transition: width 2s;
-    transition: width 2s;*/
+	-webkit-transition: width 1s ease;
+    transition: width 1s ease;
 }
